Fixed: TabLayout in editor and in bottom sheet have different styles (closes #568)

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -45,15 +45,7 @@
         android:layout_height="wrap_content"
         android:background="@color/primaryDarkColor"
         app:tabGravity="start"
-        app:tabIndicatorAnimationMode="elastic"
-        app:tabIndicatorColor="@color/secondaryColor"
-        app:tabIndicatorFullWidth="false"
-        app:tabIndicatorGravity="bottom"
-        app:tabIndicatorHeight="3dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/secondaryColor"
-        app:tabTextAppearance="@style/AppTheme.TabLayout.Title"
-        app:tabTextColor="@color/secondaryTextColor_light" />
+        style="@style/AppTheme.TabLayout"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
