--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -93,6 +93,18 @@
     <item name="colorPrimary">@color/secondaryColor</item>
   </style>
 
+  <style name="AppTheme.TabLayout" parent="Widget.Material3.TabLayout">
+    <item name="tabIndicatorAnimationMode">elastic</item>
+    <item name="tabIndicatorColor">@color/secondaryColor</item>
+    <item name="tabIndicatorFullWidth">false</item>
+    <item name="tabIndicatorGravity">bottom</item>
+    <item name="tabIndicatorHeight">3dp</item>
+    <item name="tabMode">scrollable</item>
+    <item name="tabSelectedTextColor">@color/secondaryColor</item>
+    <item name="tabTextAppearance">@style/AppTheme.TabLayout.Title</item>
+    <item name="tabTextColor">@color/secondaryTextColor_light</item>
+  </style>
+
   <style name="AppTheme.TabLayout.Title" parent="TextAppearance.Design.Tab">
     <item name="textAllCaps">false</item>
     <item name="android:textAllCaps">false</item>
