--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -17,7 +17,7 @@
       android:id="@+id/editor_appBarLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/primaryDarkColor"
+      android:backgroundTint="@color/primaryDarkColor"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
       <com.google.android.material.appbar.MaterialToolbar
