--- a/resources/src/main/res/drawable/ic_widget_checked_textview.xml
+++ b/resources/src/main/res/drawable/ic_widget_checked_textview.xml
@@ -1,10 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#FFFFFF"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12.45,16h2.09L9.43,3L7.57,3L2.46,16h2.09l1.12,-3h5.64l1.14,3zM6.43,11L8.5,5.48 10.57,11L6.43,11zM21.59,11.59l-8.09,8.09L9.83,16l-1.41,1.41 5.09,5.09L23,13l-1.41,-1.41z" />
+<vector android:height="24dp" android:viewportHeight="16"
+    android:viewportWidth="16" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/primaryIconColor" android:fillType="evenOdd" android:pathData="M13.323,7L14.5,8.164l-6.295,6.225L5,11.219l1.177,-1.163 2.028,2.005zM5.981,6.754H3.008L2.386,8.5H1L3.9,1h1.196L8,8.5H6.608l-0.627,-1.746zM3.383,5.703h2.224L4.495,2.592 3.383,5.703z"/>
 </vector>
