--- a/uidesigner/src/main/res/layout/activity_ui_designer.xml
+++ b/uidesigner/src/main/res/layout/activity_ui_designer.xml
@@ -22,8 +22,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:animateLayoutChanges="true"
-  tools:ignore="DuplicateIncludedIds"
-  tools:openDrawer="start">
+  tools:ignore="DuplicateIncludedIds">
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:id="@+id/container"
