--- a/uidesigner/src/main/res/layout/layout_designer_error.xml
+++ b/uidesigner/src/main/res/layout/layout_designer_error.xml
@@ -15,6 +15,10 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-  <string name="widget_webview">WebView</string>
-</resources>
+<com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:gravity="center"
+  android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+  tools:text="No views have been added." />
