--- a/resources/src/main/res/drawable/bg_designer_view.xml
+++ b/resources/src/main/res/drawable/bg_designer_view.xml
@@ -15,21 +15,12 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingStart="16dp"
-  android:paddingTop="32dp"
-  android:paddingEnd="16dp"
-  android:paddingBottom="32dp">
-
-  <LinearLayout
-    android:id="@+id/workspace"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_designer_view"
-    android:backgroundTint="@color/primaryLightColor"
-    android:backgroundTintMode="src_atop"
-    android:orientation="horizontal" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+  android:shape="rectangle">
+  <solid android:color="@android:color/transparent"/>
+  <stroke
+    android:width="1dp"
+    android:color="@color/secondaryColor"
+    android:dashWidth="5dp"
+    android:dashGap="5dp" />
+</shape>
