--- a/tests/test-project/app/src/main/res/layout/include.xml
+++ b/tests/test-project/app/src/main/res/layout/include.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/layout_include"/>
+    <include layout="@layout/layout_include" android:layout_width="48dp" android:layout_height="48dp"/>
 
 </LinearLayout>
