feat: apply attributes on <include> to included root layout

--- a/tests/test-project/app/src/main/res/layout/merge.xml
+++ b/tests/test-project/app/src/main/res/layout/merge.xml
@@ -20,6 +20,6 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <include layout="@layout/layout_merge" android:layout_width="48dp" android:layout_height="48dp"/>
+  <include layout="@layout/layout_merge" android:clickable="false"/>
 
 </LinearLayout>
