fix: startParse() not called

--- a/uidesigner/src/main/res/layout/fragment_designer_workspace.xml
+++ b/uidesigner/src/main/res/layout/fragment_designer_workspace.xml
@@ -30,6 +30,6 @@
     android:background="@drawable/bg_designer_view"
     android:backgroundTint="@color/primaryLightColor"
     android:backgroundTintMode="src_atop"
-    android:orientation="horizontal" />
+    android:orientation="vertical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
