--- a/uidesigner/src/main/res/layout/layout_attr_value_editor.xml
+++ b/uidesigner/src/main/res/layout/layout_attr_value_editor.xml
@@ -18,6 +18,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/_root_view"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:background="@color/content_background"
@@ -48,25 +49,22 @@
     app:layout_constraintTop_toBottomOf="@id/_title_attr_divider"
     tools:text="Specifies the basic height of the view.  This is a required attribute for any view inside of a containing layout manager.  Its value may be a dimension (such as &quot;12dip&quot;) for a constant height or one of the special constants." />
 
-  <com.google.android.material.textfield.TextInputLayout
+  <com.google.android.material.textfield.MaterialAutoCompleteTextView
     android:id="@+id/attr_value"
-    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
+    android:completionThreshold="1"
+    android:gravity="center_vertical"
     android:hint="@string/hint_attr_value"
-    android:theme="@style/AppTheme.TextInputLayout"
+    android:maxLines="1"
+    android:minHeight="56dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/comment">
-
-    <com.google.android.material.textfield.TextInputEditText
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:maxLines="1" />
-
-  </com.google.android.material.textfield.TextInputLayout>
+    app:layout_constraintTop_toBottomOf="@id/comment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
