fix: editor overlapped by the SymbolInputView (closes #589)

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -53,6 +53,7 @@
       android:id="@+id/view_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginBottom="16dp"
       android:background="@color/content_background"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
